# amplifier-module-connectors

./: .env.example  .gitignore  README.md  bundle.md  pyproject.toml
.amplifier/: bundle.md  settings.yaml
behaviors/: slack-connector.yaml
context/: slack-instructions.md
launchd/: com.amplifier.slack-connector.plist
modules/tool-slack-reply/: pyproject.toml
modules/tool-slack-reply/tool_slack_reply/: __init__.py  tool.py
src/slack_connector/: __init__.py  bot.py  bridge.py  cli.py
